# hexumi

./: .gitmodules  README.md
CAD/: MPU6050_STAND1.SLDPRT  SW2020 DS3225MG Servo 25Kg 4.8-6.8V.SLDPRT
CAD/BODY/: BODY_ASM-bRASS_DISTS.SLDASM  CHARGIN_PORT.SLDPRT  DC_PLUG.SLDPRT  LID.SLDPRT  MAIN_FRAME.SLDPRT  MID CASE.SLDPRT  MPU6050_STAND.SLDPRT  ON_SWITCH.SLDPRT  POWER_SWITCH.SLDPRT  ~$DC_PLUG.SLDPRT
CAD/BODY/FRAME/: INNER FRAM ASM.SLDASM  INNER_FRAME_ASM_BRASS.SLDASM  SERVO_FRAME_SLIMMER.SLDPRT
CAD/BODY/FRAME/POWER/: 3.3V_RELAY.SLDPRT  5v_buck.SLDPRT  7V_BUCK.SLDPRT  POWER FRAME.SLDASM  power frame R.SLDPRT  power frame.SLDPRT
CAD/BODY/FRAME/RPi/: RPi FRAME.SLDASM  RPi FRAME.SLDPRT  Raspberry Pi 3.SLDASM  Raspberry Pi Master_1.step  Rough Pi Model.step  SERVO_2040.SLDPRT
CAD/BODY/FRAME/RPi/raspberry-pi-4-model-b-1.snapshot.3/: 2.54 mm DUPONT MALE PIN HEADER, IO, 2X20, RPi4ModelB.SLDPRT  2.54 mm DUPONT MALE PIN HEADER, POE, 2X2, RPi4ModelB.SLDPRT  2X USB2.0 PORTS, RPi4ModelB.SLDPRT  2X USB3.0 PORTS, RPi4ModelB.SLDPRT  91D77 D9WHV 778K, 4 GB LPDDR4 SDRAM, RPi4ModelB.SLDPRT  Broadcom BCM2711B0 CPU, RPi4ModelB.SLDPRT  Broadcom BCM54213PE Gigabit Ethernet Transceiver, RPi4ModelB.SLDPRT  Camera Connector, RPi4ModelB.SLDPRT  Cypress CYW43455 Wireless Module Cover, RPi4ModelB.SLDPRT  Display Connector, RPi4ModelB.SLDPRT  Female Micro HDMI Connector, RPi4ModelB.SLDPRT  Female USB Type C Connector, RPi4ModelB.SLDPRT  Gigabit Ethernet Port, RPi4ModelB.SLDPRT  Microphone Plug, RPi4ModelB.SLDPRT  MxL7704 Universal PMIC, RPi4ModelB.SLDPRT  PCB, RPi4ModelB.SLDPRT  Raspberry Pi 4 Model B.SLDASM  SD Card Slot, RPi4ModelB.SLDPRT  VIA VL805 PCIe USB 3.0 controller, RPi4ModelB.SLDPRT
CAD/LEGS/: BEARING.SLDPRT  HORN.SLDPRT  LEG_L.SLDASM  LEG_R.SLDASM  LINK.SLDPRT
CAD/LEGS/COXA/: COXA_BEARING.SLDPRT  COXA_SERVO.SLDPRT
CAD/LEGS/FEMUR/: FEMUR_BEARING.SLDPRT  FEMUR_SERVO.SLDPRT
CAD/LEGS/FOOT/: DAMPER.SLDPRT  FOOT_ASM.SLDASM  RUBBER_CAP.SLDPRT  STEEL_SHAFT.SLDPRT
CAD/LEGS/FOOT_V2/: FOOT_HOLD.SLDPRT  LIMIT_SWITCH.SLDASM  LIMIT_SWITCH_LIMITER.SLDPRT  LIMIT_SWITCH_NUT.SLDPRT  LIMIT_SWITCH_SHAFT.SLDPRT  LIMIT_SWITCH_SLEEVE.SLDPRT  LIMIT_SWITCH_WASHER.SLDPRT
CAD/LEGS/SERVO/: SERVO_ASM.SLDASM  SERVO_CLIP.SLDPRT
CAD/LEGS/TIBIA_V2/: TIBIA_V2.SLDPRT  TIBIA_V2_ASM.SLDASM
CAD/fasteners/: M2.5_BRASS_SPACER_20MM.SLDPRT  M2.5_FF_SPACER.SLDPRT  M2.5_MF_SPACER.SLDPRT  M2.5_NYLON_BOLT.SLDPRT  M2.5_NYLON_HEX_NUT.SLDPRT  M2.5_STEEL_HEX_NUT.SLDPRT  M2.5_STEEL_TRI_BOLT_10MM.SLDPRT  M2.5_STEEL_TRI_BOLT_20MM.SLDPRT  M2_NYLON_BOLT.SLDPRT  M2_NYLON_HEX_NUT.SLDPRT  M3_HEX_NUT.SLDPRT  M3_SERVO_HORN_BOLT.SLDPRT  M3_SQUARE_NUT.SLDPRT  M3_STEEL_HEX_BOLT.SLDPRT  M3_STEEL_HEX_BOLT_16MM.SLDPRT  M3_WASHER.SLDPRT
STL/: COXA_BEARING.STL  COXA_SERVO.STL  FEMUR_BEARING.STL  FEMUR_SERVO.STL  FOOT_HOLD.STL  LICENSE  LID.step.STL  LINK.STL  MAIN_FRAME.STL  MID CASE.STL  MPU6050_STAND.STL  POWER_FRAME.STL  RPi FRAME.STL  SERVO_CLIP.STL  TIBIA_V2.STL
src/: LICENSE
src/hexumi_bringup/: CMakeLists.txt  package.xml
src/hexumi_bringup/config/: global_params.yaml
src/hexumi_bringup/launch/: teleop.launch.py  test.launch.py
src/hexumi_bringup/src/: global_parameter_server_node.cpp
src/hexumi_description/: CMakeLists.txt  package.xml
src/hexumi_description/meshes/collision/: BODY_COLLISIONS.dae  BODY_COLLISIONS.stl  COXA_COLLISIONS.dae  COXA_COLLISIONS.stl  FEMUR_L_COLLISIONS.dae  FEMUR_L_COLLISIONS.stl  FEMUR_R_COLLISIONS.dae  FEMUR_R_COLLISIONS.stl  TIBIA_COLLISIONS.dae  TIBIA_COLLISIONS.stl
src/hexumi_description/meshes/visual/: FEMUR.stl  FEMUR_L.stl  FEMUR_R.stl  TIBIA_L.stl  TIBIA_R.stl
src/hexumi_description/rviz/: config.rviz
src/hexumi_description/urdf/: hexumi.gv  hexumi.urdf  hexumi.xacro  hexumi_mm.xacro
src/hexumi_kinematics/: CMakeLists.txt  package.xml
src/hexumi_kinematics/include/hexumi_kinematics/: leg.hpp
src/hexumi_kinematics/src/: hexapod_paths.hpp  kinematics.cpp  kinematics.hpp  leg.hpp
src/hexumi_msgs/: CMakeLists.txt  package.xml
src/hexumi_msgs/msg/: BodyControl.msg  EulerAngles.msg  FeetContacts.msg  FeetGroundContact.msg  HexapodMotion.msg  LegPositions.msg  MetaCommands.msg  PoseEuler.msg
src/hexumi_teleop_joy/: CMakeLists.txt  package.xml
src/hexumi_teleop_joy/src/: hexumi_teleop_joy.cpp  hexumi_teleop_joy.hpp
src/servo2040_uros/: CMakeLists.txt
src/servo2040_uros/msg/: Current.msg  JointAngles.msg
uros/: CMakeLists.txt  micro_ros.cmake
uros/src/: CMakeLists.txt  main_no_pub.cpp
uros/src/libservo2040/: CMakeLists.txt
uros/src/libservo2040/drivers/: CMakeLists.txt
uros/src/libservo2040/drivers/analog/: analog.hpp
uros/src/libservo2040/drivers/analogmux/: analogmux.hpp
uros/src/libservo2040/drivers/button/: button.hpp
uros/src/libservo2040/drivers/plasma/: apa102.cpp  ws2812.cpp
uros/src/libservo2040/drivers/pwm/: pwm_cluster.hpp
uros/src/libservo2040/drivers/servo/: CMakeLists.txt
uros/src/libservo2040/libraries/: CMakeLists.txt
uros/src/libservo2040/libraries/servo2040/: CMakeLists.txt  servo2040.cmake
uros/uros_ws/src/servo2040_uros/: CMakeLists.txt  package.xml
uros/uros_ws/src/servo2040_uros/msg/: Current.msg
