<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexumi_bringup</name>
  <version>1.0.0</version>
  <description>Bring-up pachage for Hexumi the Hexapod. Contains node launch files, Rviz launch file, Gazebo launch file, and the main bring-up launch file.</description>
  <maintainer email="m.firkowski@protonmail.com">Maksymilian R. Firkowski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
