<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexumi_description</name>
  <version>0.0.0</version>
  <description>Description package for Hexumi the Hexapod. It contains the .xacro file of the robot, .rviz configuration file, and model meshes.</description>
  <maintainer email="m.firkowski@protonmail.com">Maksymilian R. Firkowski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
